WindGroup Dev/src/objects/COA_Master__c.object
<CustomObject>
    <fields>
        <fullName>Account_Type__c</fullName>
        <label>Account Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>A&amp;P  MMK0.00 Income  N-T MMK  N</fullName>
                </value>
                <value>
                    <fullName>Accounts Payable-MMK</fullName>
                </value>
                <value>
                    <fullName>Accounts Payable-USD</fullName>
                </value>
                <value>
                    <fullName>Accounts Receivable-MMK</fullName>
                </value>
                <value>
                    <fullName>Accounts Receivable-MMK Exch</fullName>
                </value>
                <value>
                    <fullName>Accounts Receivable -USD</fullName>
                </value>
                <value>
                    <fullName>Accounts Receivable -USD Exc</fullName>
                </value>
                <value>
                    <fullName>Advance Income Received</fullName>
                </value>
                <value>
                    <fullName>Advance Rental Received  MMK</fullName>
                </value>
                <value>
                    <fullName>Advance Rental Received  USD</fullName>
                </value>
                <value>
                    <fullName>Advance Revenue</fullName>
                </value>
                <value>
                    <fullName>Adv Rental Received  USD Exch</fullName>
                </value>
                <value>
                    <fullName>Assets</fullName>
                </value>
                <value>
                    <fullName>Bank</fullName>
                </value>
                <value>
                    <fullName>Cash</fullName>
                </value>
                <value>
                    <fullName>Cash at Bank  CB MMK</fullName>
                </value>
                <value>
                    <fullName>Cash at Bank  CB USD</fullName>
                </value>
                <value>
                    <fullName>Cash at Site MMK</fullName>
                </value>
                <value>
                    <fullName>Cash at Site USD Exchange</fullName>
                </value>
                <value>
                    <fullName>Cash in Hand USD</fullName>
                </value>
                <value>
                    <fullName>Cash in Hand USD Exch</fullName>
                </value>
                <value>
                    <fullName>Cast at Site USD</fullName>
                </value>
                <value>
                    <fullName>CB (0010101200310123)MMK Exch</fullName>
                </value>
                <value>
                    <fullName>CB (0010101200310123)USD</fullName>
                </value>
                <value>
                    <fullName>CB BankMMK (0010100500010038)</fullName>
                </value>
                <value>
                    <fullName>CB BankMMK (0010100500010138)</fullName>
                </value>
                <value>
                    <fullName>Commercial Tax Payable</fullName>
                </value>
                <value>
                    <fullName>Commercial tax payable MMK</fullName>
                </value>
                <value>
                    <fullName>Commercial tax payable USD</fullName>
                </value>
                <value>
                    <fullName>Commercial tax payable USD Exc</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>COA_Group__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>COA Group</label>
        <referenceTo>COA_Group__c</referenceTo>
        <relationshipLabel>COA Master</relationshipLabel>
        <relationshipName>COA_Master</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Currency_Code__c</fullName>
        <label>Currency Code</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Currency_Code</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Dr_Cr__c</fullName>
        <label>Dr/Cr</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Debit</fullName>
                </value>
                <value>
                    <fullName>Credit</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Header_Detail__c</fullName>
        <label>Header/Detail</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Header</fullName>
                </value>
                <value>
                    <fullName>Detail</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Level__c</fullName>
        <label>Level</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Sort_No__c</fullName>
        <label>Sort No.</label>
        <precision>7</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Statement_of_Cash_Flow__c</fullName>
        <label>Statement of Cash Flow</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Tax_Code__c</fullName>
        <label>Tax Code</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Taxable</fullName>
                </value>
                <value>
                    <fullName>Tax Exempt</fullName>
                </value>
                <value>
                    <fullName>Zero Rated Tax</fullName>
                </value>
                <value>
                    <fullName>Not Applicable</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Accounts Payable</fullName>
                </value>
                <value>
                    <fullName>Accounts Receivable</fullName>
                </value>
                <value>
                    <fullName>Asset</fullName>
                </value>
                <value>
                    <fullName>Bank</fullName>
                </value>
                <value>
                    <fullName>Cost of Sales</fullName>
                </value>
                <value>
                    <fullName>Equity</fullName>
                </value>
                <value>
                    <fullName>Expense</fullName>
                </value>
                <value>
                    <fullName>Fixed Asset</fullName>
                </value>
                <value>
                    <fullName>Income</fullName>
                </value>
                <value>
                    <fullName>Liability</fullName>
                </value>
                <value>
                    <fullName>Long Term Liability</fullName>
                </value>
                <value>
                    <fullName>Other Asset</fullName>
                </value>
                <value>
                    <fullName>Other Current Asset</fullName>
                </value>
                <value>
                    <fullName>Other Expense</fullName>
                </value>
                <value>
                    <fullName>Other Income</fullName>
                </value>
                <value>
                    <fullName>Other Liability</fullName>
                </value>
                <value>
                    <fullName>Other Current Liability</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>COA Master</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Account_Type__c</columns>
        <columns>COA_Group__c</columns>
        <columns>Description__c</columns>
        <columns>Dr_Cr__c</columns>
        <columns>Header_Detail__c</columns>
        <columns>Level__c</columns>
        <columns>Sort_No__c</columns>
        <columns>Tax_Code__c</columns>
        <columns>Type__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Account #</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>COA Master</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>